// This Source Code Form is subject to the terms of the GNU GPL-3.0 License.
// If a copy of the GPL-3.0 was not distributed with this file, You can obtain one at https://www.gnu.org/licenses/gpl-3.0.en.html.
// Copyright (C) 2022 Leszek Pomianowski.
// All Rights Reserved.

syntax = "proto3";

option csharp_namespace = "GeniusProtocol";

package GeniusProtocol;

service Statistic {
	rpc Push(StatisticModel) returns (StatisticResponseModel);

	rpc Get(StatisticLookupModel) returns (stream StatisticModel);
}

enum StatisticType {
	UNKNOWN = 0;
	USER = 1;
	SYSTEM = 2;
	EVENT = 3;
}

message StatisticModel {
	int32 id = 1;
	StatisticType type = 2;
	string context = 3;
}

message StatisticLookupModel {
	int32 id = 1;
}

message StatisticResponseModel {
	int32 id = 1;
}
